--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yash's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- internal css -->
+    <!-- <style>
+      body{
+        background-color:#EAF6F6;
+      }
+      hr{
+        border-style: none;
+        border-top-style:dotted;
+        border-width: 5px;
+        border-color: grey;
+        width:5%;
+      }
+    </style> -->
   </head>
+    <!--inline css(style="background-color:#EAF6F6;")-->
   <body>
     <table cellspacing="10">
       <td><img src="images/yash-cropped.png" alt="yash profile picture" /></td>
