updating some data in html file

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <hr>
     <h3>Education and Courses</h3>
     <ul>
-      <li>Sololearn - Java Fundamentals Course 2022</li>
+      <li>Learning Web Development</li>
       <li>
         Graduation - BSc with Computers from Shivaji College Delhi University
         (2018-2021)
@@ -63,12 +63,12 @@
       </thead>
       <tbody>
         <tr>
-          <td>2011-2012</td>
-          <td>Science Project in School</td>
+          <td>2020-2021</td>
+          <td>Core Java</td>
         </tr>
         <tr>
-          <td>2021-Current</td>
-          <td>Studying from Online Courses</td>
+          <td>2022-Current</td>
+          <td>Learning Web Development</td>
         </tr>
       </tbody>
     </table>
