--- a/index.html
+++ b/index.html
@@ -1,124 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  
+<head>
     <meta charset="UTF-8" />
-    <title>Yash's Personal Site</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <!-- internal css -->
-    <!-- <style>
-      body{
-        background-color:#EAF6F6;
-      }
-      hr{
-        border-style: none;
-        border-top-style:dotted;
-        border-width: 5px;
-        border-color: grey;
-        width:5%;
-      }
-    </style> -->
-  </head>
-    <!--inline css(style="background-color:#EAF6F6;")-->
-  <body>
-    <table cellspacing="10">
-      <td><img src="images/yash-cropped.png" alt="yash profile picture" /></td>
-      <td>
-        <h1>Yash Khanna</h1>
-        <p>
-          <em
-            >I am a student learning
-            <strong>
-              <a
-                href="https://www.udemy.com/course/the-complete-web-development-bootcamp/"
-                >Web Development</a
-              ></strong
-            ></em
-          >
+    <title>Yash Khannna</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
+      rel="stylesheet"/>
+</head>
+
+<body>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img"/>
+      <div class="title-text">
+        <h1>I'm Yash.</h1>
+        <h2>a <span class="pro">pro</span>grammer.</h2>
+      </div>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
+      <img src="images/mountain.png" alt="mountain-img" />
+    </div>
+
+    <div class="middle-container">
+      <div class="profile">
+        <img src="images/yash-cropped.png" alt="my-pic" />
+        <h2>Hello.</h2>
+        <p class="intro">
+          I'm a web designer / developer based in Delhi, India. I have a passion
+          for web design and love to create for web.
         </p>
-        <p>
-          I have done my graduation in BSc with Computers and practicing my
-          coding skills to get a good job.
-        </p>
-      </td>
-    </table>
-    <hr>
-    <h3>Education and Courses</h3>
-    <ul>
-      <li>Learning Web Development</li>
-      <li>
-        Graduation - BSc with Computers from Shivaji College Delhi University
-        (2018-2021)
-      </li>
-      <li>12th Standard - RPVV Kishan Ganj (2017-2018)</li>
-      <li>10th Standard - RPVV Kishan Ganj (2015-2016)</li>
-    </ul>
-    <hr>
-    <h3>Work</h3>
-    <table cellspacing="10"> 
-      <thead>
-        <tr>
-          <th>Dates</th>
-          <th>Work</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2020-2021</td>
-          <td>Core Java</td>
-        </tr>
-        <tr>
-          <td>2022-Current</td>
-          <td>Learning Web Development</td>
-        </tr>
-      </tbody>
-    </table>
-    <hr>
-    <h3>Skills</h3>
-    <table cellspacing="10">
-      <tr>
-        <!--row1-->
-        <td>Python</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <!--row2-->
-        <td>Java</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <!--row3-->
-        <td>DSA</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <!--row4-->
-        <td>HTML</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <!--row5-->
-        <td>CSS</td>
-        <td>⭐⭐</td>
-      </tr>
-      <tr>
-        <!--row6-->
-        <td>JavaScript</td>
-        <td>⭐</td>
-      </tr>
-    </table>
-    <hr />
-    <h3>Hobbies</h3>
-    <ol>
-      <li><a href="https://playvalorant.com/en-us/">Video Games</a></li>
-      <li>Cricket</li>
-      <li>Football</li>
-      <li>
-        <a href="https://www.youtube.com/channel/UClfEht64_NrzHf8Y0slKEjw"
-          >Learning about world history</a
-        >
-      </li>
-      <li>Watching Anime</li>
-    </ol>
-    <h3><a href="contact.html">Contact me</a></h3>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="design" src="images/design.png" alt="design-png" />
+
+          <h3>Web Design.</h3>
+          <p>I like to create attractive web pages and my goals are to focus on content and conveying the message that you want to send.
+          </p>
+
+        </div>
+        <div class="skill-row">
+          <img class="box-lang" src="images/coding.png" alt="my-pic" />
+          <h3>Developer.</h3>
+          <p>
+            I'm a developer, so i know how to create your website to run across
+            devices using the latest technologies available.
+          </p>
+        </div>  
+      </div>
+      <hr>
+
+      <div class="contact-me">
+        <h2>Get In Touch.</h2>
+        <h3>I'm currently available for work.</h3>
+        <p>If you have a project that you want to get started, think you need my
+          help with something or just fancy saying hey, then get in touch.</p>
+        <a class="btn" href="mailto:yash.khannaaa18@gmail.com">CONTACT ME</a>
+      </div>
+
+    </div>
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/in/yash-khanna-551a45168/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/Yash_Khanna1">Twitter</a>
+      <a class="footer-link" href="https://github.com/yashkhannaaa">Website</a>
+      <p>© 2022 Yash Khanna.</p>
+    </div>
+
   </body>
 </html>
